--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -6,6 +6,7 @@
     "com.unity.collab-proxy": "2.3.1",
     "com.unity.feature.development": "1.0.1",
     "com.unity.inputsystem": "1.6.3",
+    "com.unity.memoryprofiler": "1.1.0",
     "com.unity.probuilder": "5.0.7",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.4",
